--- a/public/games.html
+++ b/public/games.html
@@ -8,7 +8,7 @@
   <meta property="og:image" content="./assets/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lunarsync</title>
+  <title>DW</title>
   <link rel="icon" href="./assets/favicon.png" type="image/xcon" />
   <link rel="manifest" href="/manifest.json" />
   <link rel="stylesheet" href="./css/themes.css" />
@@ -35,7 +35,7 @@
       <i class="uil uil-bars navOpenBtn"></i>
       <a href="/index.html" class="logo">
         <img src="./assets/favicon.png" class="logo-image">
-        Lunarsync
+        DW
       </a>
     </div>
     <div class="left">
@@ -61,11 +61,6 @@
     </div>
   </nav>
   <div class="main-content">
-    <a href="https://arsenic.smartfoloo.space/" class="">
-      <button class="button">
-        <ion-icon name="open-outline"></ion-icon>
-        Check out my new site (fixed)
-      </button>
     </a>
     <div class="input-box">
       <div class="input-container">
@@ -600,7 +595,7 @@
           <div class="content">
             <p class="title">Stickman Bike</p>
           </div>
-          <img loading="lazy" src="./assets/images/stickmanbike.avif" />
+          <img loading="lazy" src="./assets/fonts/stickman-bike/stick.jpg" />
         </div>
       </a>
       <a href="/play.html?game=idle-gang" target="_parent">
@@ -608,7 +603,7 @@
           <div class="content">
             <p class="title">Idle Gang</p>
           </div>
-          <img loading="lazy" src="./assets/images/idlegang.avif" />
+          <img loading="lazy" src="./assets/fonts/idle-gang/game_29933_62135e168693c.jpg" />
         </div>
       </a>
       <a href="/play.html?game=idle-light-city" target="_parent">
@@ -616,7 +611,7 @@
           <div class="content">
             <p class="title">Idle Light City</p>
           </div>
-          <img loading="lazy" src="./assets/images/idlelightcity.avif" />
+          <img loading="lazy" src="./assets/fonts/idle-light-city/idle.png" />
         </div>
       </a>
       <a href="/play.html?game=table-tennis-world-tour" target="_parent">
@@ -920,7 +915,7 @@
           <div class="content">
             <p class="title">Idle Farming Business</p>
           </div>
-          <img loading="lazy" src="./assets/images/idlefarmingbusiness.avif" />
+          <img loading="lazy" src="./assets/fonts/idle-farming-business/farm.png" />
         </div>
       </a>
       <a href="/play.html?game=idle-mining-empire" target="_parent">
@@ -1001,14 +996,6 @@
             <p class="title">Murder</p>
           </div>
           <img loading="lazy" src="./assets/images/murder.png" />
-        </div>
-      </a>
-      <a href="/play.html?game=monster-tracks" target="_parent">
-        <div class="game-card">
-          <div class="content">
-            <p class="title">Monster Tracks</p>
-          </div>
-          <img loading="lazy" src="./assets/images/monstertracks.avif" />
         </div>
       </a>
       <a href="/play.html?game=drive-mad" target="_parent">
@@ -1360,7 +1347,7 @@
           <div class="content">
             <p class="title">Master Chess</p>
           </div>
-          <img loading="lazy" src="./assets/images/masterchess.avif" />
+          <img loading="lazy" src="./assets/fonts/master-chess/chess.png" />
         </div>
       </a>
       <a href="/play.html?game=master-checkers" target="_parent">
@@ -1368,7 +1355,7 @@
           <div class="content">
             <p class="title">Master Checkers</p>
           </div>
-          <img loading="lazy" src="./assets/images/mastercheckers.avif" />
+          <img loading="lazy" src="./assets/fonts/master-checkers/check.jpg" />
         </div>
       </a>
       <a href="/play.html?game=classic-backgammon" target="_parent">
@@ -1600,7 +1587,7 @@
           <div class="content">
             <p class="title">Bacon May Die</p>
           </div>
-          <img loading="lazy" src="./assets/images/baconmaydie.avif" />
+          <img loading="lazy" src="./assets/fonts/bacon-may-die/bacon.png" />
         </div>
       </a>
       <a href="/play.html?game=stick-duel-battle" target="_parent">
@@ -1888,10 +1875,10 @@
   <footer class="footer">
     <div class="footer-branding">
       <img src="./assets/favicon.png" alt="" class="footer-logo">
-      <h4>Lunarsync</h4>
+      <h4>DW</h4>
     </div>
     <div class="copyright">
-      <h5>© 2022-2024 Lunarsync. All rights reserved.</h5>
+      <h5>© 2022-2024 DW. All rights reserved.</h5>
     </div>
   </footer>
 </body>
