--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -8,7 +8,7 @@
   <meta property="og:image" content="./assets/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lunarsync</title>
+  <title>DW</title>
   <link rel="icon" href="./assets/favicon.png" type="image/xcon" />
   <link rel="manifest" href="/manifest.json" />
   <link rel="stylesheet" href="./css/themes.css" />
@@ -33,7 +33,7 @@
       <i class="uil uil-bars navOpenBtn"></i>
       <a href="/index.html" class="logo">
         <img src="./assets/favicon.png" class="logo-image">
-        Lunarsync
+        DW
       </a>
     </div>
     <div class="left">
@@ -85,7 +85,7 @@
         </li>
         <li>
           <h4><strong>Company</strong> (referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or
-            &quot;Our&quot; in this Agreement) refers to Lunarsync.</h4>
+            &quot;Our&quot; in this Agreement) refers to DW.</h4>
         </li>
         <li>
           <h4><strong>Cookies</strong> are small files that are placed on Your computer, mobile device or any other device by a
@@ -115,7 +115,7 @@
             from the Service infrastructure itself (for example, the duration of a page visit).</h4>
         </li>
         <li>
-          <h4><strong>Website</strong> refers to Lunarsync, accessible from <a href="https://platformerdotio.co/"
+          <h4><strong>Website</strong> refers to DW, accessible from <a href="https://platformerdotio.co/"
               rel="external nofollow noopener" target="_blank">https://platformerdotio.co/</a></h4>
         </li>
         <li>
@@ -325,10 +325,10 @@
   <footer class="footer">
     <div class="footer-branding">
       <img src="./assets/favicon.png" alt="" class="footer-logo">
-      <h4>Lunarsync</h4>
+      <h4>DW</h4>
     </div>
     <div class="copyright">
-      <h5>© 2022-2024 Lunarsync. All rights reserved.</h5>
+      <h5>© 2022-2024 DW. All rights reserved.</h5>
     </div>
   </footer>
 </body>
